--- a/src/client/components/contentContainer/ContentContainer.css
+++ b/src/client/components/contentContainer/ContentContainer.css
@@ -9,6 +9,12 @@
   align-items: center
 }
 
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .sourh .speech-container {
   height: 100%;
   width: 80%;
@@ -134,7 +140,7 @@
   background-color: rgba(0, 0, 0, .5);
   width: 100%;
   height: 100%;
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
   cursor: default;
