--- a/src/client/components/ayahComponent/AyahComponent.css
+++ b/src/client/components/ayahComponent/AyahComponent.css
@@ -3,14 +3,36 @@
   position: relative
 }
 
-@media (max-width: 575.98px) {
+.loader {
+  display: flex;
+  justify-content: center;
 }
 
-@media (min-width: 576px) and (max-width: 767.98px) {
+.ayahsFonting {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  font-size: 30px;
+  list-style-type: none
 }
 
-@media (min-width: 768px) and (max-width: 991.98px) {
+.buttons {
+  margin: 20px 10px 20px 10px;
+  display: block;
+  text-align: center;
+  font-weight: 500;
+  padding: 12px 20px 12px 20px;
 }
 
-@media (min-width: 992px) and (max-width: 1199.98px) {
+.buttons.flat-three-d.turquoise {
+  border: 0;
+  border-bottom: 4px solid #12ab8d;
 }
+
+@media (max-width: 575.98px) {}
+
+@media (min-width: 576px) and (max-width: 767.98px) {}
+
+@media (min-width: 768px) and (max-width: 991.98px) {}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {}
