--- a/src/client/components/menu/Menu.css
+++ b/src/client/components/menu/Menu.css
@@ -67,6 +67,7 @@ hr {
   opacity: 1 !important;
   visibility: visible !important;
   transform: translateX(0) !important;
+  height: 92vh;
 }
 
 .menu .list-menu {
@@ -74,7 +75,6 @@ hr {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
   overflow-y: scroll;
 }
 
